// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MeepleCard - Snapshots > Complete Examples > should match snapshot for fully loaded game card 1`] = `
<div
  aria-label="Game: Twilight Imperium"
  class="group relative overflow-hidden cursor-pointer transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl bg-card/90 backdrop-blur-[12px] backdrop-saturate-[180%] dark:bg-card dark:backdrop-blur-none border border-border/50 shadow-sm hover:shadow-lg hover:-translate-y-1"
  data-entity="game"
  data-testid="complete-game-card"
  data-variant="grid"
  role="button"
  tabindex="0"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 bottom-0 w-1 group-hover:w-1.5 transition-all duration-200"
    style="background-color: rgb(224, 97, 6);"
  />
  <span
    class="absolute top-3 left-4 z-10 px-2 py-0.5 text-[10px] font-bold uppercase tracking-wider text-white rounded-md shadow-sm"
    style="background-color: rgb(224, 97, 6);"
  >
    Game
  </span>
  <div
    class="relative overflow-hidden aspect-[7/10] rounded-t-2xl"
  >
    <img
      alt="Twilight Imperium"
      class="object-cover transition-transform duration-500 group-hover:scale-105"
      data-fill="true"
      data-loading="lazy"
      data-placeholder="blur"
      data-sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 25vw"
      src="https://example.com/ti4.jpg"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
      style="background: linear-gradient(180deg, transparent 50%, hsl(var(--card)) 100%);"
    />
  </div>
  <div
    class="flex-1 flex flex-col p-4"
  >
    <h3
      class="font-quicksand font-bold text-lg mb-0.5 text-card-foreground line-clamp-2"
    >
      Twilight Imperium
    </h3>
    <p
      class="text-muted-foreground text-sm mb-2"
    >
      Fantasy Flight Games · 2017
    </p>
    <div
      aria-label="Rating: 8.7 out of 10"
      class="flex items-center gap-1 mb-2"
    >
      <span
        class="text-sm text-amber-400"
      >
        ★
      </span>
      <span
        class="text-sm text-amber-400"
      >
        ★
      </span>
      <span
        class="text-sm text-amber-400"
      >
        ★
      </span>
      <span
        class="text-sm text-amber-400"
      >
        ★
      </span>
      <span
        class="text-sm text-muted-foreground/30"
      >
        ★
      </span>
      <span
        class="text-xs text-muted-foreground ml-1"
      >
        8.7
      </span>
    </div>
    <span
      class="absolute top-3 right-3 bg-card/90 backdrop-blur-sm px-2 py-0.5 rounded-md text-xs font-semibold text-muted-foreground border border-border/50"
    >
      Popular
    </span>
  </div>
  <div
    class="flex items-center justify-evenly gap-2 px-4 py-3 border-t border-border/50 bg-muted/60 dark:bg-muted/40 rounded-b-2xl"
    data-testid="meeple-card-footer"
  >
    <span
      class="flex items-center gap-1.5 text-xs text-foreground/70 dark:text-foreground/60"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-users w-3.5 h-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
        />
        <path
          d="M16 3.128a4 4 0 0 1 0 7.744"
        />
        <path
          d="M22 21v-2a4 4 0 0 0-3-3.87"
        />
        <circle
          cx="9"
          cy="7"
          r="4"
        />
      </svg>
      <span
        class="font-nunito font-semibold"
      >
        3-6
      </span>
    </span>
    <span
      class="flex items-center gap-1.5 text-xs text-foreground/70 dark:text-foreground/60"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-clock w-3.5 h-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6v6l4 2"
        />
        <circle
          cx="12"
          cy="12"
          r="10"
        />
      </svg>
      <span
        class="font-nunito font-semibold"
      >
        4-8h
      </span>
    </span>
  </div>
</div>
`;

exports[`MeepleCard - Snapshots > Complete Examples > should match snapshot for tournament hero 1`] = `
<article
  aria-label="Event: MeepleAI Tournament"
  class="group cursor-pointer transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 relative flex flex-col rounded-3xl overflow-hidden min-h-[320px] shadow-xl hover:shadow-2xl hover:scale-[1.01]"
  data-entity="event"
  data-testid="meeple-card"
  data-variant="hero"
>
  <span
    class="absolute top-4 right-[-2rem] z-20 py-1 px-10 text-xs font-bold uppercase tracking-wider text-white shadow-md rotate-45"
    style="background-color: rgb(244, 62, 92);"
  >
    Event
  </span>
  <div
    class="overflow-hidden absolute inset-0"
  >
    <img
      alt="MeepleAI Tournament"
      class="object-cover transition-transform duration-500 group-hover:scale-105"
      data-fill="true"
      data-loading="lazy"
      data-placeholder="blur"
      data-sizes="100vw"
      src="https://example.com/tournament.jpg"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
    />
  </div>
  <div
    class="relative z-10 mt-auto flex flex-col justify-end p-5 bg-black/80 backdrop-blur-sm"
  >
    <h3
      class="font-quicksand font-bold text-2xl text-white mb-1 drop-shadow-lg"
    >
      MeepleAI Tournament
    </h3>
    <p
      class="text-white/85 text-sm mb-2"
    >
      Grand Finals · Live Streamed
    </p>
    <div
      class="flex flex-wrap gap-2 mt-auto"
    >
      <span
        class="flex items-center gap-1 text-white/90 text-sm"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trophy w-3 h-3 opacity-70"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 14.66v1.626a2 2 0 0 1-.976 1.696A5 5 0 0 0 7 21.978"
          />
          <path
            d="M14 14.66v1.626a2 2 0 0 0 .976 1.696A5 5 0 0 1 17 21.978"
          />
          <path
            d="M18 9h1.5a1 1 0 0 0 0-5H18"
          />
          <path
            d="M4 22h16"
          />
          <path
            d="M6 9a6 6 0 0 0 12 0V3a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1z"
          />
          <path
            d="M6 9H4.5a1 1 0 0 1 0-5H6"
          />
        </svg>
        <span>
          $500 Prize
        </span>
      </span>
      <span
        class="flex items-center gap-1 text-white/90 text-sm"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-map-pin w-3 h-3 opacity-70"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
          />
          <circle
            cx="12"
            cy="10"
            r="3"
          />
        </svg>
        <span>
          Online
        </span>
      </span>
      <span
        class="flex items-center gap-1 text-white/90 text-sm"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-users w-3 h-3 opacity-70"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <path
            d="M16 3.128a4 4 0 0 1 0 7.744"
          />
          <path
            d="M22 21v-2a4 4 0 0 0-3-3.87"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
        </svg>
        <span>
          128 players
        </span>
      </span>
    </div>
    <div
      class="flex gap-2 mt-3"
    >
      <button
        class="flex-1 py-2 px-4 rounded-lg font-quicksand font-semibold text-sm transition-all duration-200 hover:-translate-y-0.5 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:translate-y-0 text-white shadow-md hover:shadow-lg"
        style="background-color: rgb(244, 62, 92);"
      >
        Register Now
      </button>
      <button
        class="flex-1 py-2 px-4 rounded-lg font-quicksand font-semibold text-sm transition-all duration-200 hover:-translate-y-0.5 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:translate-y-0 bg-muted text-foreground hover:bg-muted/80"
      >
        Learn More
      </button>
    </div>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Entity Types > should match snapshot for collection entity 1`] = `
<article
  aria-label="Custom: Euro Games Essentials"
  class="group relative overflow-hidden cursor-pointer transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl bg-card/90 backdrop-blur-[12px] backdrop-saturate-[180%] dark:bg-card dark:backdrop-blur-none border border-border/50 shadow-sm hover:shadow-lg hover:-translate-y-1"
  data-entity="custom"
  data-testid="meeple-card"
  data-variant="grid"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 bottom-0 w-1 group-hover:w-1.5 transition-all duration-200"
    style="background-color: rgb(38, 98, 217);"
  />
  <span
    class="absolute top-3 left-4 z-10 px-2 py-0.5 text-[10px] font-bold uppercase tracking-wider text-white rounded-md shadow-sm"
    style="background-color: rgb(38, 98, 217);"
  >
    Custom
  </span>
  <div
    class="relative overflow-hidden aspect-[7/10] rounded-t-2xl"
  >
    <img
      alt="Euro Games Essentials"
      class="object-cover transition-transform duration-500 group-hover:scale-105"
      data-fill="true"
      data-loading="lazy"
      data-placeholder="blur"
      data-sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 25vw"
      src="https://example.com/collection.jpg"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
      style="background: linear-gradient(180deg, transparent 50%, hsl(var(--card)) 100%);"
    />
  </div>
  <div
    class="flex-1 flex flex-col p-4"
  >
    <h3
      class="font-quicksand font-bold text-lg mb-0.5 text-card-foreground line-clamp-2"
    >
      Euro Games Essentials
    </h3>
    <p
      class="text-muted-foreground text-sm mb-2"
    >
      Curated by @boardgame_guru
    </p>
  </div>
  <div
    class="flex items-center justify-evenly gap-2 px-4 py-3 border-t border-border/50 bg-muted/60 dark:bg-muted/40 rounded-b-2xl"
    data-testid="meeple-card-footer"
  >
    <span
      class="flex items-center gap-1.5 text-xs text-foreground/70 dark:text-foreground/60"
    >
      <span
        class="font-nunito font-semibold"
      >
        24 games
      </span>
    </span>
    <span
      class="flex items-center gap-1.5 text-xs text-foreground/70 dark:text-foreground/60"
    >
      <span
        class="font-nunito font-semibold"
      >
        1.2K views
      </span>
    </span>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Entity Types > should match snapshot for custom entity 1`] = `
<article
  aria-label="Custom: Custom Entity"
  class="group relative overflow-hidden cursor-pointer transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl bg-card/90 backdrop-blur-[12px] backdrop-saturate-[180%] dark:bg-card dark:backdrop-blur-none border border-border/50 shadow-sm hover:shadow-lg hover:-translate-y-1"
  data-entity="custom"
  data-testid="meeple-card"
  data-variant="grid"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 bottom-0 w-1 group-hover:w-1.5 transition-all duration-200"
    style="background-color: rgb(22, 162, 73);"
  />
  <span
    class="absolute top-3 left-4 z-10 px-2 py-0.5 text-[10px] font-bold uppercase tracking-wider text-white rounded-md shadow-sm"
    style="background-color: rgb(22, 162, 73);"
  >
    Custom
  </span>
  <div
    class="relative overflow-hidden aspect-[7/10] rounded-t-2xl"
  >
    <img
      alt="Custom Entity"
      class="object-cover transition-transform duration-500 group-hover:scale-105"
      data-fill="true"
      data-loading="lazy"
      data-placeholder="blur"
      data-sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 25vw"
      src="https://example.com/custom.jpg"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
      style="background: linear-gradient(180deg, transparent 50%, hsl(var(--card)) 100%);"
    />
  </div>
  <div
    class="flex-1 flex flex-col p-4"
  >
    <h3
      class="font-quicksand font-bold text-lg mb-0.5 text-card-foreground line-clamp-2"
    >
      Custom Entity
    </h3>
    <p
      class="text-muted-foreground text-sm mb-2"
    >
      With custom color
    </p>
  </div>
  <div
    class="flex items-center justify-evenly gap-2 px-4 py-3 border-t border-border/50 bg-muted/60 dark:bg-muted/40 rounded-b-2xl"
    data-testid="meeple-card-footer"
  >
    <span
      class="flex items-center gap-1.5 text-xs text-foreground/70 dark:text-foreground/60"
    >
      <span
        class="font-nunito font-semibold"
      >
        Custom metadata
      </span>
    </span>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Entity Types > should match snapshot for event entity 1`] = `
<article
  aria-label="Event: Saturday Game Night"
  class="group relative overflow-hidden cursor-pointer transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl bg-card/90 backdrop-blur-[12px] backdrop-saturate-[180%] dark:bg-card dark:backdrop-blur-none border border-border/50 shadow-sm hover:shadow-lg hover:-translate-y-1"
  data-entity="event"
  data-testid="meeple-card"
  data-variant="grid"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 bottom-0 w-1 group-hover:w-1.5 transition-all duration-200"
    style="background-color: rgb(244, 62, 92);"
  />
  <span
    class="absolute top-3 left-4 z-10 px-2 py-0.5 text-[10px] font-bold uppercase tracking-wider text-white rounded-md shadow-sm"
    style="background-color: rgb(244, 62, 92);"
  >
    Event
  </span>
  <div
    class="relative overflow-hidden aspect-[7/10] rounded-t-2xl"
  >
    <img
      alt="Saturday Game Night"
      class="object-cover transition-transform duration-500 group-hover:scale-105"
      data-fill="true"
      data-loading="lazy"
      data-placeholder="blur"
      data-sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 25vw"
      src="https://example.com/event.jpg"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
      style="background: linear-gradient(180deg, transparent 50%, hsl(var(--card)) 100%);"
    />
  </div>
  <div
    class="flex-1 flex flex-col p-4"
  >
    <h3
      class="font-quicksand font-bold text-lg mb-0.5 text-card-foreground line-clamp-2"
    >
      Saturday Game Night
    </h3>
    <p
      class="text-muted-foreground text-sm mb-2"
    >
      Feb 15, 2026 · 7:00 PM
    </p>
  </div>
  <div
    class="flex items-center justify-evenly gap-2 px-4 py-3 border-t border-border/50 bg-muted/60 dark:bg-muted/40 rounded-b-2xl"
    data-testid="meeple-card-footer"
  >
    <span
      class="flex items-center gap-1.5 text-xs text-foreground/70 dark:text-foreground/60"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-map-pin w-3.5 h-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
        />
        <circle
          cx="12"
          cy="10"
          r="3"
        />
      </svg>
      <span
        class="font-nunito font-semibold"
      >
        Milano, IT
      </span>
    </span>
    <span
      class="flex items-center gap-1.5 text-xs text-foreground/70 dark:text-foreground/60"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-users w-3.5 h-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
        />
        <path
          d="M16 3.128a4 4 0 0 1 0 7.744"
        />
        <path
          d="M22 21v-2a4 4 0 0 0-3-3.87"
        />
        <circle
          cx="9"
          cy="7"
          r="4"
        />
      </svg>
      <span
        class="font-nunito font-semibold"
      >
        4/6 spots
      </span>
    </span>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Entity Types > should match snapshot for game entity 1`] = `
<article
  aria-label="Game: Azul"
  class="group relative overflow-hidden cursor-pointer transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl bg-card/90 backdrop-blur-[12px] backdrop-saturate-[180%] dark:bg-card dark:backdrop-blur-none border border-border/50 shadow-sm hover:shadow-lg hover:-translate-y-1"
  data-entity="game"
  data-testid="meeple-card"
  data-variant="grid"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 bottom-0 w-1 group-hover:w-1.5 transition-all duration-200"
    style="background-color: rgb(224, 97, 6);"
  />
  <span
    class="absolute top-3 left-4 z-10 px-2 py-0.5 text-[10px] font-bold uppercase tracking-wider text-white rounded-md shadow-sm"
    style="background-color: rgb(224, 97, 6);"
  >
    Game
  </span>
  <div
    class="relative overflow-hidden aspect-[7/10] rounded-t-2xl"
  >
    <img
      alt="Azul"
      class="object-cover transition-transform duration-500 group-hover:scale-105"
      data-fill="true"
      data-loading="lazy"
      data-placeholder="blur"
      data-sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 25vw"
      src="https://example.com/azul.jpg"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
      style="background: linear-gradient(180deg, transparent 50%, hsl(var(--card)) 100%);"
    />
  </div>
  <div
    class="flex-1 flex flex-col p-4"
  >
    <h3
      class="font-quicksand font-bold text-lg mb-0.5 text-card-foreground line-clamp-2"
    >
      Azul
    </h3>
    <p
      class="text-muted-foreground text-sm mb-2"
    >
      Plan B Games
    </p>
    <div
      aria-label="Rating: 4.2 out of 5"
      class="flex items-center gap-1 mb-2"
    >
      <span
        class="text-sm text-amber-400"
      >
        ★
      </span>
      <span
        class="text-sm text-amber-400"
      >
        ★
      </span>
      <span
        class="text-sm text-amber-400"
      >
        ★
      </span>
      <span
        class="text-sm text-amber-400"
      >
        ★
      </span>
      <span
        class="text-sm text-muted-foreground/30"
      >
        ★
      </span>
      <span
        class="text-xs text-muted-foreground ml-1"
      >
        4.2
      </span>
    </div>
  </div>
  <div
    class="flex items-center justify-evenly gap-2 px-4 py-3 border-t border-border/50 bg-muted/60 dark:bg-muted/40 rounded-b-2xl"
    data-testid="meeple-card-footer"
  >
    <span
      class="flex items-center gap-1.5 text-xs text-foreground/70 dark:text-foreground/60"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-users w-3.5 h-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
        />
        <path
          d="M16 3.128a4 4 0 0 1 0 7.744"
        />
        <path
          d="M22 21v-2a4 4 0 0 0-3-3.87"
        />
        <circle
          cx="9"
          cy="7"
          r="4"
        />
      </svg>
      <span
        class="font-nunito font-semibold"
      >
        2-4
      </span>
    </span>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Entity Types > should match snapshot for player entity 1`] = `
<article
  aria-label="Player: Marco Rossi"
  class="group relative overflow-hidden cursor-pointer transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl bg-card/90 backdrop-blur-[12px] backdrop-saturate-[180%] dark:bg-card dark:backdrop-blur-none border border-border/50 shadow-sm hover:shadow-lg hover:-translate-y-1"
  data-entity="player"
  data-testid="meeple-card"
  data-variant="grid"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 bottom-0 w-1 group-hover:w-1.5 transition-all duration-200"
    style="background-color: rgb(124, 59, 237);"
  />
  <span
    class="absolute top-3 left-4 z-10 px-2 py-0.5 text-[10px] font-bold uppercase tracking-wider text-white rounded-md shadow-sm"
    style="background-color: rgb(124, 59, 237);"
  >
    Player
  </span>
  <div
    class="relative overflow-hidden aspect-[7/10] rounded-t-2xl"
  >
    <img
      alt="Marco Rossi"
      class="object-cover transition-transform duration-500 group-hover:scale-105"
      data-fill="true"
      data-loading="lazy"
      data-placeholder="blur"
      data-sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 25vw"
      src="https://example.com/avatar.jpg"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
      style="background: linear-gradient(180deg, transparent 50%, hsl(var(--card)) 100%);"
    />
  </div>
  <div
    class="flex-1 flex flex-col p-4"
  >
    <h3
      class="font-quicksand font-bold text-lg mb-0.5 text-card-foreground line-clamp-2"
    >
      Marco Rossi
    </h3>
    <p
      class="text-muted-foreground text-sm mb-2"
    >
      @marco_games · Since 2019
    </p>
  </div>
  <div
    class="flex items-center justify-evenly gap-2 px-4 py-3 border-t border-border/50 bg-muted/60 dark:bg-muted/40 rounded-b-2xl"
    data-testid="meeple-card-footer"
  >
    <span
      class="flex items-center gap-1.5 text-xs text-foreground/70 dark:text-foreground/60"
    >
      <span
        class="font-nunito font-semibold"
      >
        142 plays
      </span>
    </span>
    <span
      class="flex items-center gap-1.5 text-xs text-foreground/70 dark:text-foreground/60"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-trophy w-3.5 h-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 14.66v1.626a2 2 0 0 1-.976 1.696A5 5 0 0 0 7 21.978"
        />
        <path
          d="M14 14.66v1.626a2 2 0 0 0 .976 1.696A5 5 0 0 1 17 21.978"
        />
        <path
          d="M18 9h1.5a1 1 0 0 0 0-5H18"
        />
        <path
          d="M4 22h16"
        />
        <path
          d="M6 9a6 6 0 0 0 12 0V3a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1z"
        />
        <path
          d="M6 9H4.5a1 1 0 0 1 0-5H6"
        />
      </svg>
      <span
        class="font-nunito font-semibold"
      >
        Top 5%
      </span>
    </span>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Layout Variants > should match snapshot for compact variant 1`] = `
<article
  aria-label="Game: Twilight Imperium"
  class="group relative overflow-hidden cursor-pointer transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-row items-center gap-2 p-2 rounded-lg bg-card/80 border border-border/30 hover:bg-card"
  data-entity="game"
  data-testid="meeple-card"
  data-variant="compact"
>
  <span
    aria-hidden="true"
    class="w-2 h-2 rounded-full flex-shrink-0"
    style="background-color: rgb(224, 97, 6);"
  />
  <div
    class="flex-1 min-w-0"
  >
    <h3
      class="font-quicksand font-bold text-sm text-card-foreground"
    >
      Twilight Imperium
    </h3>
    <p
      class="text-muted-foreground text-xs mb-0"
    >
      Fantasy Flight Games · 2017
    </p>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Layout Variants > should match snapshot for featured variant 1`] = `
<article
  aria-label="Game: Twilight Imperium"
  class="group relative cursor-pointer transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl overflow-hidden bg-card border border-border/50 shadow-md hover:shadow-xl hover:-translate-y-2"
  data-entity="game"
  data-testid="meeple-card"
  data-variant="featured"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 bottom-0 w-1 group-hover:w-1.5 transition-all duration-200"
    style="background-color: rgb(224, 97, 6);"
  />
  <span
    class="absolute top-3 left-4 z-10 px-2 py-0.5 text-[10px] font-bold uppercase tracking-wider text-white rounded-md shadow-sm"
    style="background-color: rgb(224, 97, 6);"
  >
    Game
  </span>
  <div
    class="relative overflow-hidden aspect-[16/9]"
  >
    <img
      alt="Twilight Imperium"
      class="object-cover transition-transform duration-500 group-hover:scale-105"
      data-fill="true"
      data-loading="lazy"
      data-placeholder="blur"
      data-sizes="(max-width: 768px) 100vw, 50vw"
      src="https://example.com/game.jpg"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
    />
  </div>
  <div
    class="flex-1 flex flex-col p-5"
  >
    <h3
      class="font-quicksand font-bold text-xl mb-1 text-card-foreground"
    >
      Twilight Imperium
    </h3>
    <p
      class="text-muted-foreground text-sm mb-2"
    >
      Fantasy Flight Games · 2017
    </p>
    <div
      aria-label="Rating: 8.7 out of 10"
      class="flex items-center gap-1 mb-2"
    >
      <span
        class="text-sm text-amber-400"
      >
        ★
      </span>
      <span
        class="text-sm text-amber-400"
      >
        ★
      </span>
      <span
        class="text-sm text-amber-400"
      >
        ★
      </span>
      <span
        class="text-sm text-amber-400"
      >
        ★
      </span>
      <span
        class="text-sm text-muted-foreground/30"
      >
        ★
      </span>
      <span
        class="text-xs text-muted-foreground ml-1"
      >
        8.7
      </span>
    </div>
    <div
      class="flex flex-wrap gap-2"
    >
      <span
        class="flex items-center gap-1 text-muted-foreground text-xs bg-muted px-2 py-0.5 rounded-md"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-users w-3 h-3 opacity-70"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <path
            d="M16 3.128a4 4 0 0 1 0 7.744"
          />
          <path
            d="M22 21v-2a4 4 0 0 0-3-3.87"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
        </svg>
        <span>
          3-6
        </span>
      </span>
      <span
        class="flex items-center gap-1 text-muted-foreground text-xs bg-muted px-2 py-0.5 rounded-md"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-clock w-3 h-3 opacity-70"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 6v6l4 2"
          />
          <circle
            cx="12"
            cy="12"
            r="10"
          />
        </svg>
        <span>
          4-8h
        </span>
      </span>
    </div>
    <div
      class="flex gap-2 mt-3"
    >
      <button
        class="flex-1 py-2 px-4 rounded-lg font-quicksand font-semibold text-sm transition-all duration-200 hover:-translate-y-0.5 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:translate-y-0 text-white shadow-md hover:shadow-lg"
        style="background-color: rgb(224, 97, 6);"
      >
        Browse
      </button>
      <button
        class="flex-1 py-2 px-4 rounded-lg font-quicksand font-semibold text-sm transition-all duration-200 hover:-translate-y-0.5 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:translate-y-0 bg-muted text-foreground hover:bg-muted/80"
      >
        Clone
      </button>
    </div>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Layout Variants > should match snapshot for grid variant 1`] = `
<article
  aria-label="Game: Twilight Imperium"
  class="group relative overflow-hidden cursor-pointer transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl bg-card/90 backdrop-blur-[12px] backdrop-saturate-[180%] dark:bg-card dark:backdrop-blur-none border border-border/50 shadow-sm hover:shadow-lg hover:-translate-y-1"
  data-entity="game"
  data-testid="meeple-card"
  data-variant="grid"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 bottom-0 w-1 group-hover:w-1.5 transition-all duration-200"
    style="background-color: rgb(224, 97, 6);"
  />
  <span
    class="absolute top-3 left-4 z-10 px-2 py-0.5 text-[10px] font-bold uppercase tracking-wider text-white rounded-md shadow-sm"
    style="background-color: rgb(224, 97, 6);"
  >
    Game
  </span>
  <div
    class="relative overflow-hidden aspect-[7/10] rounded-t-2xl"
  >
    <img
      alt="Twilight Imperium"
      class="object-cover transition-transform duration-500 group-hover:scale-105"
      data-fill="true"
      data-loading="lazy"
      data-placeholder="blur"
      data-sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 25vw"
      src="https://example.com/game.jpg"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
      style="background: linear-gradient(180deg, transparent 50%, hsl(var(--card)) 100%);"
    />
  </div>
  <div
    class="flex-1 flex flex-col p-4"
  >
    <h3
      class="font-quicksand font-bold text-lg mb-0.5 text-card-foreground line-clamp-2"
    >
      Twilight Imperium
    </h3>
    <p
      class="text-muted-foreground text-sm mb-2"
    >
      Fantasy Flight Games · 2017
    </p>
    <div
      aria-label="Rating: 8.7 out of 10"
      class="flex items-center gap-1 mb-2"
    >
      <span
        class="text-sm text-amber-400"
      >
        ★
      </span>
      <span
        class="text-sm text-amber-400"
      >
        ★
      </span>
      <span
        class="text-sm text-amber-400"
      >
        ★
      </span>
      <span
        class="text-sm text-amber-400"
      >
        ★
      </span>
      <span
        class="text-sm text-muted-foreground/30"
      >
        ★
      </span>
      <span
        class="text-xs text-muted-foreground ml-1"
      >
        8.7
      </span>
    </div>
  </div>
  <div
    class="flex items-center justify-evenly gap-2 px-4 py-3 border-t border-border/50 bg-muted/60 dark:bg-muted/40 rounded-b-2xl"
    data-testid="meeple-card-footer"
  >
    <span
      class="flex items-center gap-1.5 text-xs text-foreground/70 dark:text-foreground/60"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-users w-3.5 h-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
        />
        <path
          d="M16 3.128a4 4 0 0 1 0 7.744"
        />
        <path
          d="M22 21v-2a4 4 0 0 0-3-3.87"
        />
        <circle
          cx="9"
          cy="7"
          r="4"
        />
      </svg>
      <span
        class="font-nunito font-semibold"
      >
        3-6
      </span>
    </span>
    <span
      class="flex items-center gap-1.5 text-xs text-foreground/70 dark:text-foreground/60"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-clock w-3.5 h-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6v6l4 2"
        />
        <circle
          cx="12"
          cy="12"
          r="10"
        />
      </svg>
      <span
        class="font-nunito font-semibold"
      >
        4-8h
      </span>
    </span>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Layout Variants > should match snapshot for hero variant 1`] = `
<article
  aria-label="Game: Twilight Imperium"
  class="group cursor-pointer transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 relative flex flex-col rounded-3xl overflow-hidden min-h-[320px] shadow-xl hover:shadow-2xl hover:scale-[1.01]"
  data-entity="game"
  data-testid="meeple-card"
  data-variant="hero"
>
  <span
    class="absolute top-4 right-[-2rem] z-20 py-1 px-10 text-xs font-bold uppercase tracking-wider text-white shadow-md rotate-45"
    style="background-color: rgb(224, 97, 6);"
  >
    Game
  </span>
  <div
    class="overflow-hidden absolute inset-0"
  >
    <img
      alt="Twilight Imperium"
      class="object-cover transition-transform duration-500 group-hover:scale-105"
      data-fill="true"
      data-loading="lazy"
      data-placeholder="blur"
      data-sizes="100vw"
      src="https://example.com/game.jpg"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
    />
  </div>
  <div
    class="relative z-10 mt-auto flex flex-col justify-end p-5 bg-black/80 backdrop-blur-sm"
  >
    <h3
      class="font-quicksand font-bold text-2xl text-white mb-1 drop-shadow-lg"
    >
      Twilight Imperium
    </h3>
    <p
      class="text-white/85 text-sm mb-2"
    >
      Fantasy Flight Games · 2017
    </p>
    <div
      aria-label="Rating: 8.7 out of 10"
      class="flex items-center gap-1 mb-2 text-white"
    >
      <span
        class="text-sm text-amber-400"
      >
        ★
      </span>
      <span
        class="text-sm text-amber-400"
      >
        ★
      </span>
      <span
        class="text-sm text-amber-400"
      >
        ★
      </span>
      <span
        class="text-sm text-amber-400"
      >
        ★
      </span>
      <span
        class="text-sm text-muted-foreground/30"
      >
        ★
      </span>
      <span
        class="text-xs text-muted-foreground ml-1"
      >
        8.7
      </span>
    </div>
    <div
      class="flex flex-wrap gap-2 mt-auto"
    >
      <span
        class="flex items-center gap-1 text-white/90 text-sm"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-users w-3 h-3 opacity-70"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <path
            d="M16 3.128a4 4 0 0 1 0 7.744"
          />
          <path
            d="M22 21v-2a4 4 0 0 0-3-3.87"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
        </svg>
        <span>
          3-6
        </span>
      </span>
      <span
        class="flex items-center gap-1 text-white/90 text-sm"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-clock w-3 h-3 opacity-70"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 6v6l4 2"
          />
          <circle
            cx="12"
            cy="12"
            r="10"
          />
        </svg>
        <span>
          4-8h
        </span>
      </span>
    </div>
    <div
      class="flex gap-2 mt-3"
    >
      <button
        class="flex-1 py-2 px-4 rounded-lg font-quicksand font-semibold text-sm transition-all duration-200 hover:-translate-y-0.5 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:translate-y-0 text-white shadow-md hover:shadow-lg"
        style="background-color: rgb(224, 97, 6);"
      >
        Register Now
      </button>
      <button
        class="flex-1 py-2 px-4 rounded-lg font-quicksand font-semibold text-sm transition-all duration-200 hover:-translate-y-0.5 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:translate-y-0 bg-muted text-foreground hover:bg-muted/80"
      >
        Learn More
      </button>
    </div>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Layout Variants > should match snapshot for list variant 1`] = `
<article
  aria-label="Game: Twilight Imperium"
  class="group relative overflow-hidden cursor-pointer transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-row items-center gap-4 p-3 rounded-xl bg-card border border-border/50 shadow-sm hover:shadow-md hover:translate-x-1"
  data-entity="game"
  data-testid="meeple-card"
  data-variant="list"
>
  <span
    aria-hidden="true"
    class="w-2 h-2 rounded-full flex-shrink-0"
    style="background-color: rgb(224, 97, 6);"
  />
  <div
    class="relative overflow-hidden w-16 h-16 rounded-lg flex-shrink-0"
  >
    <img
      alt="Twilight Imperium"
      class="object-cover transition-transform duration-500 group-hover:scale-105"
      data-fill="true"
      data-loading="lazy"
      data-placeholder="blur"
      data-sizes="64px"
      src="https://example.com/game.jpg"
    />
  </div>
  <div
    class="flex-1 min-w-0 py-1"
  >
    <h3
      class="font-quicksand font-bold text-base text-card-foreground line-clamp-2"
    >
      Twilight Imperium
    </h3>
    <p
      class="text-muted-foreground text-sm mb-2"
    >
      Fantasy Flight Games · 2017
    </p>
    <div
      aria-label="Rating: 8.7 out of 10"
      class="flex items-center gap-1 mb-2"
    >
      <span
        class="text-sm text-amber-400"
      >
        ★
      </span>
      <span
        class="text-sm text-amber-400"
      >
        ★
      </span>
      <span
        class="text-sm text-amber-400"
      >
        ★
      </span>
      <span
        class="text-sm text-amber-400"
      >
        ★
      </span>
      <span
        class="text-sm text-muted-foreground/30"
      >
        ★
      </span>
      <span
        class="text-xs text-muted-foreground ml-1"
      >
        8.7
      </span>
    </div>
    <div
      class="flex flex-wrap gap-2"
    >
      <span
        class="flex items-center gap-1 text-muted-foreground text-xs bg-muted px-2 py-0.5 rounded-md"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-users w-3 h-3 opacity-70"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <path
            d="M16 3.128a4 4 0 0 1 0 7.744"
          />
          <path
            d="M22 21v-2a4 4 0 0 0-3-3.87"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
        </svg>
        <span>
          3-6
        </span>
      </span>
      <span
        class="flex items-center gap-1 text-muted-foreground text-xs bg-muted px-2 py-0.5 rounded-md"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-clock w-3 h-3 opacity-70"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 6v6l4 2"
          />
          <circle
            cx="12"
            cy="12"
            r="10"
          />
        </svg>
        <span>
          4-8h
        </span>
      </span>
    </div>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Loading State > should match snapshot for compact skeleton 1`] = `
<div
  class="group relative overflow-hidden cursor-pointer transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-row items-center gap-2 p-2 rounded-lg bg-card/80 border border-border/30 hover:bg-card animate-pulse pointer-events-none"
  data-testid="meeple-card-skeleton"
>
  <div
    class="relative overflow-hidden w-10 h-10 rounded-md flex-shrink-0 bg-muted"
  />
  <div
    class="flex-1 min-w-0"
  >
    <div
      class="h-5 bg-muted rounded w-3/4 mb-2"
    />
    <div
      class="h-3 bg-muted rounded w-1/2 mb-3"
    />
    <div
      class="flex gap-2"
    >
      <div
        class="h-4 bg-muted rounded w-12"
      />
      <div
        class="h-4 bg-muted rounded w-12"
      />
    </div>
  </div>
</div>
`;

exports[`MeepleCard - Snapshots > Loading State > should match snapshot for featured skeleton 1`] = `
<div
  class="group relative cursor-pointer transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl overflow-hidden bg-card border border-border/50 shadow-md hover:shadow-xl hover:-translate-y-2 animate-pulse pointer-events-none"
  data-testid="meeple-card-skeleton"
>
  <div
    class="relative overflow-hidden aspect-[16/9] bg-muted"
  />
  <div
    class="flex-1 flex flex-col p-5"
  >
    <div
      class="h-5 bg-muted rounded w-3/4 mb-2"
    />
    <div
      class="h-3 bg-muted rounded w-1/2 mb-3"
    />
    <div
      class="flex gap-2"
    >
      <div
        class="h-4 bg-muted rounded w-12"
      />
      <div
        class="h-4 bg-muted rounded w-12"
      />
    </div>
  </div>
</div>
`;

exports[`MeepleCard - Snapshots > Loading State > should match snapshot for grid skeleton 1`] = `
<div
  class="group relative overflow-hidden cursor-pointer transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl bg-card/90 backdrop-blur-[12px] backdrop-saturate-[180%] dark:bg-card dark:backdrop-blur-none border border-border/50 shadow-sm hover:shadow-lg hover:-translate-y-1 animate-pulse pointer-events-none"
  data-testid="meeple-card-skeleton"
>
  <div
    class="relative overflow-hidden aspect-[7/10] rounded-t-2xl bg-muted"
  />
  <div
    class="flex-1 flex flex-col p-4"
  >
    <div
      class="h-5 bg-muted rounded w-3/4 mb-2"
    />
    <div
      class="h-3 bg-muted rounded w-1/2 mb-3"
    />
    <div
      class="flex gap-2"
    >
      <div
        class="h-4 bg-muted rounded w-12"
      />
      <div
        class="h-4 bg-muted rounded w-12"
      />
    </div>
  </div>
</div>
`;

exports[`MeepleCard - Snapshots > Loading State > should match snapshot for hero skeleton 1`] = `
<div
  class="group cursor-pointer transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 relative flex flex-col rounded-3xl overflow-hidden min-h-[320px] shadow-xl hover:shadow-2xl hover:scale-[1.01] animate-pulse pointer-events-none"
  data-testid="meeple-card-skeleton"
>
  <div
    class="overflow-hidden absolute inset-0 bg-muted"
  />
  <div
    class="relative z-10 mt-auto flex flex-col justify-end p-5 bg-black/80 backdrop-blur-sm"
  >
    <div
      class="h-5 bg-muted rounded w-3/4 mb-2"
    />
    <div
      class="h-3 bg-muted rounded w-1/2 mb-3"
    />
    <div
      class="flex gap-2"
    >
      <div
        class="h-4 bg-muted rounded w-12"
      />
      <div
        class="h-4 bg-muted rounded w-12"
      />
    </div>
  </div>
</div>
`;

exports[`MeepleCard - Snapshots > Loading State > should match snapshot for list skeleton 1`] = `
<div
  class="group relative overflow-hidden cursor-pointer transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-row items-center gap-4 p-3 rounded-xl bg-card border border-border/50 shadow-sm hover:shadow-md hover:translate-x-1 animate-pulse pointer-events-none"
  data-testid="meeple-card-skeleton"
>
  <div
    class="relative overflow-hidden w-16 h-16 rounded-lg flex-shrink-0 bg-muted"
  />
  <div
    class="flex-1 min-w-0 py-1"
  >
    <div
      class="h-5 bg-muted rounded w-3/4 mb-2"
    />
    <div
      class="h-3 bg-muted rounded w-1/2 mb-3"
    />
    <div
      class="flex gap-2"
    >
      <div
        class="h-4 bg-muted rounded w-12"
      />
      <div
        class="h-4 bg-muted rounded w-12"
      />
    </div>
  </div>
</div>
`;

exports[`MeepleCard - Snapshots > Loading State > should match snapshot for loading prop 1`] = `
<div
  class="group relative overflow-hidden cursor-pointer transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl bg-card/90 backdrop-blur-[12px] backdrop-saturate-[180%] dark:bg-card dark:backdrop-blur-none border border-border/50 shadow-sm hover:shadow-lg hover:-translate-y-1 animate-pulse pointer-events-none"
  data-testid="meeple-card-skeleton"
>
  <div
    class="relative overflow-hidden aspect-[7/10] rounded-t-2xl bg-muted"
  />
  <div
    class="flex-1 flex flex-col p-4"
  >
    <div
      class="h-5 bg-muted rounded w-3/4 mb-2"
    />
    <div
      class="h-3 bg-muted rounded w-1/2 mb-3"
    />
    <div
      class="flex gap-2"
    >
      <div
        class="h-4 bg-muted rounded w-12"
      />
      <div
        class="h-4 bg-muted rounded w-12"
      />
    </div>
  </div>
</div>
`;

exports[`MeepleCard - Snapshots > Special States > should match snapshot with badge 1`] = `
<article
  aria-label="Game: New Release"
  class="group relative overflow-hidden cursor-pointer transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl bg-card/90 backdrop-blur-[12px] backdrop-saturate-[180%] dark:bg-card dark:backdrop-blur-none border border-border/50 shadow-sm hover:shadow-lg hover:-translate-y-1"
  data-entity="game"
  data-testid="meeple-card"
  data-variant="grid"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 bottom-0 w-1 group-hover:w-1.5 transition-all duration-200"
    style="background-color: rgb(224, 97, 6);"
  />
  <span
    class="absolute top-3 left-4 z-10 px-2 py-0.5 text-[10px] font-bold uppercase tracking-wider text-white rounded-md shadow-sm"
    style="background-color: rgb(224, 97, 6);"
  >
    Game
  </span>
  <div
    class="relative overflow-hidden aspect-[7/10] rounded-t-2xl"
  >
    <img
      alt="New Release"
      class="object-cover transition-transform duration-500 group-hover:scale-105"
      data-fill="true"
      data-loading="lazy"
      data-placeholder="blur"
      data-sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 25vw"
      src="https://example.com/game.jpg"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
      style="background: linear-gradient(180deg, transparent 50%, hsl(var(--card)) 100%);"
    />
  </div>
  <div
    class="flex-1 flex flex-col p-4"
  >
    <h3
      class="font-quicksand font-bold text-lg mb-0.5 text-card-foreground line-clamp-2"
    >
      New Release
    </h3>
    <p
      class="text-muted-foreground text-sm mb-2"
    >
      Publisher
    </p>
    <span
      class="absolute top-3 right-3 bg-card/90 backdrop-blur-sm px-2 py-0.5 rounded-md text-xs font-semibold text-muted-foreground border border-border/50"
    >
      New
    </span>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Special States > should match snapshot with disabled action 1`] = `
<article
  aria-label="Game: Featured Game"
  class="group relative cursor-pointer transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl overflow-hidden bg-card border border-border/50 shadow-md hover:shadow-xl hover:-translate-y-2"
  data-entity="game"
  data-testid="meeple-card"
  data-variant="featured"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 bottom-0 w-1 group-hover:w-1.5 transition-all duration-200"
    style="background-color: rgb(224, 97, 6);"
  />
  <span
    class="absolute top-3 left-4 z-10 px-2 py-0.5 text-[10px] font-bold uppercase tracking-wider text-white rounded-md shadow-sm"
    style="background-color: rgb(224, 97, 6);"
  >
    Game
  </span>
  <div
    class="relative overflow-hidden aspect-[16/9]"
  >
    <img
      alt="Featured Game"
      class="object-cover transition-transform duration-500 group-hover:scale-105"
      data-fill="true"
      data-loading="lazy"
      data-placeholder="blur"
      data-sizes="(max-width: 768px) 100vw, 50vw"
      src="data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="400" height="300" viewBox="0 0 400 300"%3E%3Crect width="400" height="300" fill="%23334155"/%3E%3Ctext x="50%25" y="50%25" dominant-baseline="middle" text-anchor="middle" font-family="sans-serif" font-size="64" fill="%239CA3AF"%3E%F0%9F%8E%B2%3C/text%3E%3C/svg%3E"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
    />
  </div>
  <div
    class="flex-1 flex flex-col p-5"
  >
    <h3
      class="font-quicksand font-bold text-xl mb-1 text-card-foreground"
    >
      Featured Game
    </h3>
    <p
      class="text-muted-foreground text-sm mb-2"
    >
      Publisher
    </p>
    <div
      class="flex gap-2 mt-3"
    >
      <button
        class="flex-1 py-2 px-4 rounded-lg font-quicksand font-semibold text-sm transition-all duration-200 hover:-translate-y-0.5 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:translate-y-0 text-white shadow-md hover:shadow-lg"
        style="background-color: rgb(224, 97, 6);"
      >
        Available
      </button>
      <button
        class="flex-1 py-2 px-4 rounded-lg font-quicksand font-semibold text-sm transition-all duration-200 hover:-translate-y-0.5 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:translate-y-0 bg-muted text-foreground hover:bg-muted/80"
        disabled=""
      >
        Sold Out
      </button>
    </div>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Special States > should match snapshot with minimal props 1`] = `
<article
  aria-label="Game: Minimal Card"
  class="group relative overflow-hidden cursor-pointer transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl bg-card/90 backdrop-blur-[12px] backdrop-saturate-[180%] dark:bg-card dark:backdrop-blur-none border border-border/50 shadow-sm hover:shadow-lg hover:-translate-y-1"
  data-entity="game"
  data-testid="meeple-card"
  data-variant="grid"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 bottom-0 w-1 group-hover:w-1.5 transition-all duration-200"
    style="background-color: rgb(224, 97, 6);"
  />
  <span
    class="absolute top-3 left-4 z-10 px-2 py-0.5 text-[10px] font-bold uppercase tracking-wider text-white rounded-md shadow-sm"
    style="background-color: rgb(224, 97, 6);"
  >
    Game
  </span>
  <div
    class="relative overflow-hidden aspect-[7/10] rounded-t-2xl"
  >
    <img
      alt="Minimal Card"
      class="object-cover transition-transform duration-500 group-hover:scale-105"
      data-fill="true"
      data-loading="lazy"
      data-placeholder="blur"
      data-sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 25vw"
      src="data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="400" height="300" viewBox="0 0 400 300"%3E%3Crect width="400" height="300" fill="%23334155"/%3E%3Ctext x="50%25" y="50%25" dominant-baseline="middle" text-anchor="middle" font-family="sans-serif" font-size="64" fill="%239CA3AF"%3E%F0%9F%8E%B2%3C/text%3E%3C/svg%3E"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
      style="background: linear-gradient(180deg, transparent 50%, hsl(var(--card)) 100%);"
    />
  </div>
  <div
    class="flex-1 flex flex-col p-4"
  >
    <h3
      class="font-quicksand font-bold text-lg mb-0.5 text-card-foreground line-clamp-2"
    >
      Minimal Card
    </h3>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Special States > should match snapshot with onClick (interactive) 1`] = `
<div
  aria-label="Game: Clickable Card"
  class="group relative overflow-hidden cursor-pointer transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl bg-card/90 backdrop-blur-[12px] backdrop-saturate-[180%] dark:bg-card dark:backdrop-blur-none border border-border/50 shadow-sm hover:shadow-lg hover:-translate-y-1"
  data-entity="game"
  data-testid="meeple-card"
  data-variant="grid"
  role="button"
  tabindex="0"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 bottom-0 w-1 group-hover:w-1.5 transition-all duration-200"
    style="background-color: rgb(224, 97, 6);"
  />
  <span
    class="absolute top-3 left-4 z-10 px-2 py-0.5 text-[10px] font-bold uppercase tracking-wider text-white rounded-md shadow-sm"
    style="background-color: rgb(224, 97, 6);"
  >
    Game
  </span>
  <div
    class="relative overflow-hidden aspect-[7/10] rounded-t-2xl"
  >
    <img
      alt="Clickable Card"
      class="object-cover transition-transform duration-500 group-hover:scale-105"
      data-fill="true"
      data-loading="lazy"
      data-placeholder="blur"
      data-sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 25vw"
      src="data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="400" height="300" viewBox="0 0 400 300"%3E%3Crect width="400" height="300" fill="%23334155"/%3E%3Ctext x="50%25" y="50%25" dominant-baseline="middle" text-anchor="middle" font-family="sans-serif" font-size="64" fill="%239CA3AF"%3E%F0%9F%8E%B2%3C/text%3E%3C/svg%3E"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
      style="background: linear-gradient(180deg, transparent 50%, hsl(var(--card)) 100%);"
    />
  </div>
  <div
    class="flex-1 flex flex-col p-4"
  >
    <h3
      class="font-quicksand font-bold text-lg mb-0.5 text-card-foreground line-clamp-2"
    >
      Clickable Card
    </h3>
    <p
      class="text-muted-foreground text-sm mb-2"
    >
      Publisher
    </p>
  </div>
</div>
`;

exports[`MeepleCard - Snapshots > Special States > should match snapshot without image 1`] = `
<article
  aria-label="Game: No Image Game"
  class="group relative overflow-hidden cursor-pointer transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl bg-card/90 backdrop-blur-[12px] backdrop-saturate-[180%] dark:bg-card dark:backdrop-blur-none border border-border/50 shadow-sm hover:shadow-lg hover:-translate-y-1"
  data-entity="game"
  data-testid="meeple-card"
  data-variant="grid"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 bottom-0 w-1 group-hover:w-1.5 transition-all duration-200"
    style="background-color: rgb(224, 97, 6);"
  />
  <span
    class="absolute top-3 left-4 z-10 px-2 py-0.5 text-[10px] font-bold uppercase tracking-wider text-white rounded-md shadow-sm"
    style="background-color: rgb(224, 97, 6);"
  >
    Game
  </span>
  <div
    class="relative overflow-hidden aspect-[7/10] rounded-t-2xl"
  >
    <img
      alt="No Image Game"
      class="object-cover transition-transform duration-500 group-hover:scale-105"
      data-fill="true"
      data-loading="lazy"
      data-placeholder="blur"
      data-sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 25vw"
      src="data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="400" height="300" viewBox="0 0 400 300"%3E%3Crect width="400" height="300" fill="%23334155"/%3E%3Ctext x="50%25" y="50%25" dominant-baseline="middle" text-anchor="middle" font-family="sans-serif" font-size="64" fill="%239CA3AF"%3E%F0%9F%8E%B2%3C/text%3E%3C/svg%3E"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
      style="background: linear-gradient(180deg, transparent 50%, hsl(var(--card)) 100%);"
    />
  </div>
  <div
    class="flex-1 flex flex-col p-4"
  >
    <h3
      class="font-quicksand font-bold text-lg mb-0.5 text-card-foreground line-clamp-2"
    >
      No Image Game
    </h3>
    <p
      class="text-muted-foreground text-sm mb-2"
    >
      Publisher
    </p>
  </div>
</article>
`;
